2012-11-01  Pedro Vicente  <pvicente@uci.edu>

	* ncks regression test #26: Extract group attributes

	* ncks: nco_grp_lst_mk_trv: Create groups/variables in output file 
	
2012-10-31  Charlie Zender  <zender@uci.edu>

 	* NCO 4.2.3 release procedure:
 	Changes since nco-4_2_2: nothing yet
	cd ~/nco;cvs tag -d nco-4_2_3;cvs tag -d nco-4_2_3-1
	cd ~/nco;cvs commit -m "Preparing nco-4.2.3 release"
	cvs tag -c nco-4_2_3;cvs tag -c nco-4_2_3-1

	* ncflint: verify output type is float when interpolating between two packed floats

2012-10-29  Charlie Zender  <zender@uci.edu>

 	* NCO 4.2.2 release procedure:
 	Changes since nco-4_2_1: ncks groups, hdr_pad, NULs, _'s, ncecat GAG
	cd ~/nco;cvs tag -d nco-4_2_2;cvs tag -d nco-4_2_2-1
	cd ~/nco;cvs commit -m "Preparing nco-4.2.2 release"
	cvs tag -c nco-4_2_2;cvs tag -c nco-4_2_2-1

2012-10-28  Pedro Vicente  <pvicente@uci.edu>

	* ncks regression test #24: Hyperslabs (test -d with -v and -g)

	* ncks regression test #25: Dimensions (test -v dimension)

2012-10-27  Pedro Vicente  <pvicente@uci.edu>

	* ncks regression test #22: Extract variables in groups (test -g with -v)

	* ncks regression test #23: Create variables in groups (test -G with -v and -g)

2012-10-26  Charlie Zender  <zender@uci.edu>

	* ncecat: Copy global attributes of first file to root of output file

	* Place nco_hst_att_cat() after nco4_grp_lst_mk() so appending history command works

2012-10-25  Pedro Vicente  <pvicente@uci.edu>

	* nco_def_grp_flg() used in nco4_grp_lst_mk_itr() for append mode

2012-10-24  Pedro Vicente  <pvicente@uci.edu>

	* xtr_lst_fnd() finds full variable name in extraction list

	* nco_aux_grp_id() returns group ID given variable full name

	* Add to in_grp.cdl for CF tests: add gds_var, gds_crd, lat_gds, lon_gds

	* nco_fnd_var_trv() finds variable by relative name and exports to "nm_id"

	* nco_var_lst_crd_ass_add_cf() adds to extraction list all
	coordinates associated with CF convention; regression test ncks #21
