@@ -1,6 +1,6 @@
 package NCO_rgr;
 
-# $Header: /data/zender/nco_20150216/nco/bm/NCO_rgr.pm,v 1.135 2012-11-01 22:10:55 pvicente Exp $
+# $Header: /data/zender/nco_20150216/nco/bm/NCO_rgr.pm,v 1.136 2012-11-01 22:40:52 pvicente Exp $
 
 # Purpose: All REGRESSION tests for NCO operators
 # BENCHMARKS are coded in "NCO_benchmarks.pm"
@@ -782,7 +782,7 @@ sub tst_rgr {
     $tst_cmd[2]="123";
     $tst_cmd[3]="SS_OK";
     NCO_bm::tst_run(\@tst_cmd);
-    $#tst_cmd=0;  # Reset array				
+    $#tst_cmd=0;  # Reset array	
 	
 #NCO 4.2.3: groups: Extract group attributes
     $tst_cmd[0]="ncks -O -g g3 $in_pth_arg in_grp.nc %tmp_fl_00%";
@@ -791,7 +791,16 @@ sub tst_rgr {
     $tst_cmd[2]="Global attribute 0: g3_group_attribute, size = 18 NC_CHAR, value = g3_group_attribute";
     $tst_cmd[3]="SS_OK";
     NCO_bm::tst_run(\@tst_cmd);
-    $#tst_cmd=0;  # Reset array					
+    $#tst_cmd=0;  # Reset array	
+	
+#NCO 4.2.3: groups: Extract global attributes
+    $tst_cmd[0]="ncks -O -g g3 $in_pth_arg in_grp.nc %tmp_fl_00%";
+    $tst_cmd[1]="ncks %tmp_fl_00% | grep Conventions";
+    $dsc_sng="(Groups required) Extract global attributes";
+    $tst_cmd[2]="Global attribute 0: Conventions, size = 6 NC_CHAR, value = CF-1.0";
+    $tst_cmd[3]="SS_OK";
+    NCO_bm::tst_run(\@tst_cmd);
+    $#tst_cmd=0;  # Reset array		
 
 #####################
 #### ncpdq tests #### -OK !
