@@ -1,6 +1,8 @@
 2012-11-01  Pedro Vicente  <pvicente@uci.edu>
 
 	* ncks regression test #26: Extract group attributes
+	
+	* ncks regression test #27: Extract global attributes
 
 	* ncks: nco_grp_lst_mk_trv: Create groups/variables in output file 
 	
